BusOne/src/objects/TSF_vod__c.object
<CustomObject>
    <description>The object that stores territory specific fields for an account. If no row exists for an account / territory combination a new row will be created when a call is saved to that account.</description>
    <fields>
        <fullName>Account_vod__c</fullName>
        <description>Lookup to the account for which the territory specific field is applied to.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>TSF_vod</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Address_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the address of the account assigned to the territory.</description>
        <label>My Preferred Address</label>
        <referenceTo>Address_vod__c</referenceTo>
        <relationshipLabel>Territory Fields</relationshipLabel>
        <relationshipName>TSF_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Allowed_Products_vod__c</fullName>
        <description>Double semi-colon delimited list of Product Names
-- Example: Cholecap;;Labrinone</description>
        <inlineHelpText>Double semi-colon delimited list of Product Names
-- Example: Cholecap;;Labrinone</inlineHelpText>
        <label>Allowed Product</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>External_Id_vod__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>External Id that is populated by a Veeva Trigger. The field is populate on insert\update with a composite index of Account + &apos;__&apos; + Territory.</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Last_Activity_Date_vod__c</fullName>
        <description>The most recent date a call was made to the account for the given territory.  This excludes &quot;Planned&quot; calls for that account/territory. Updated when calls are saved.</description>
        <label>Last Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>System field used by mobile products to aid synchronization.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>My_Target_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether the account is specifically targeted in that territory.</description>
        <label>My Target</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preferred_Account_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Populated by TSF Future Apex Logic on Calls.</description>
        <label>My Preferred Location</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Territory Fields (My Preferred Location)</relationshipLabel>
        <relationshipName>Perferred_Account_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Route_vod__c</fullName>
        <description>The assigned route used for the account in a given territory.  To edit the routes, edit the picklist values.</description>
        <label>Route</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Route 1</fullName>
                </value>
                <value>
                    <fullName>Route 2</fullName>
                </value>
                <value>
                    <fullName>Route 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Territory_vod__c</fullName>
        <description>The name of the territory for which the territory specific fields of an account are created for.</description>
        <label>Territory</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YTD_Activity_vod__c</fullName>
        <description>The YTD total number of recorded calls (excluding &quot;Planned&quot; calls) for an account within the given territory. Updated when calls are saved.</description>
        <label>YTD Activity</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Territory Field</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>TSF Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Territory Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>